<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0f3f7"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.voluntariapp.HelloActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp"
        android:background="@drawable/apptheme_btn_default_holo_light"
        android:clickable="true"
        android:onClick="login"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/action_sign_in" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:clickable="true"
        android:onClick="reg"
        android:text="@string/action_register"
        android:textColor="#33b5e5"
        android:textSize="20dp" 
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_marginBottom="26dp"
        android:background="@drawable/apptheme_edit_text_holo_light"
        android:ems="10"
        android:hint="@string/prompt_user"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:background="@drawable/apptheme_edit_text_holo_light"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="600px"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:alpha=".10"
        android:src="@drawable/logo_app" />

</RelativeLayout>